processed/gerrit/txt/19094.txt
Change:     19094
Subject:    Revert "LU-6245 libcfs: remove cfs_fs_time handling"
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/19094
Change-Id:  I629bd51d27206db7c6b6251ca7089707d33287b8
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Oleg Drokin
Created:    2016-03-23 14:37:37.000000000
Updated:    2016-03-24 07:03:07.000000000
Patch Set:  3
Insertions: +122
Deletions:  -20
Comments:   56 (0 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +2; Oleg Drokin: +2
  Verified: Jenkins: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Andreas Dilger, James Simmons

--- Commit Message ---
Revert "LU-6245 libcfs: remove cfs_fs_time handling"

This seems to be causing build failures on EL7:
cc1: all warnings being treated as errors
In file included from libcfs/include/libcfs/linux/libcfs.h:51:0,
                from libcfs/include/libcfs/libcfs.h:45,
                from lnet/include/lnet/lib-lnet.h:48,
                from lnet/lnet/api-ni.c:39:
libcfs/include/libcfs/linux/linux-time.h:111:0: error: "ktime_get_real_ts64" redefined [-Werror]
#define ktime_get_real_ts64 ktime_get_real_ts
^
In file included from include/linux/timer.h:5:0,
                from include/linux/workqueue.h:8,
                from include/linux/pm.h:25,
                from include/linux/device.h:25,
                from include/linux/node.h:17,
                from include/linux/cpu.h:17,
                from libcfs/include/libcfs/linux/linux-cpu.h:50,
                from libcfs/include/libcfs/linux/libcfs.h:50,
                from libcfs/include/libcfs/libcfs.h:45,
                from lnet/include/lnet/lib-lnet.h:48,
                from lnet/lnet/api-ni.c:39:
include/linux/ktime.h:455:0: note: this is the location of the previous definition
#define ktime_get_real_ts64(ts) getnstimeofday64(ts)
^
make[7]: *** [lnet/klnds/o2iblnd/o2iblnd.o] Error 1
make[6]: *** [lnet/klnds/o2iblnd] Error 2
make[5]: *** [lnet/klnds] Error 2
make[5]: *** Waiting for unfinished jobs....
cc1: all warnings being treated as errors
make[6]: *** [lnet/lnet/api-ni.o] Error 1
make[6]: *** Waiting for unfinished jobs....

This reverts commit c3ddfae1b795385aa14db61df1a416ab57bfc066.

Change-Id: I629bd51d27206db7c6b6251ca7089707d33287b8
Reviewed-on: http://review.whamcloud.com/19094
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Jenkins
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>

--- Review History ---

--- Message (wc-checkpatch, 2016-03-23 14:42:51.000000000) ---
Patch Set 1:

(28 comments)

29 style warning(s).
For more details please see https://wiki.hpdd.intel.com/display/PUB/Coding+Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2016-03-23 14:44:19.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (James Simmons, 2016-03-23 14:46:32.000000000) ---
Patch Set 1:

Oh this patch is really old and the newer versions of RHEL7 must of add some of newer time handling code.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2016-03-23 14:57:56.000000000) ---
Patch Set 1:

PPC64 Builder: build succesful

--- Message (Andreas Dilger, 2016-03-23 16:56:29.000000000) ---
Patch Set 2: Commit message was updated

--- Message (wc-checkpatch, 2016-03-23 16:58:12.000000000) ---
Patch Set 2:

(28 comments)

29 style warning(s).
For more details please see https://wiki.hpdd.intel.com/display/PUB/Coding+Guidelines

--- Message (Andreas Dilger, 2016-03-23 16:58:17.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2016-03-23 17:01:03.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2016-03-23 17:09:43.000000000) ---
Patch Set 2:

PPC64 Builder: build succesful

--- Message (Jenkins, 2016-03-23 20:04:41.000000000) ---
Patch Set 2:

Build Started https://build.hpdd.intel.com/job/lustre-reviews/37881/

--- Message (Jenkins, 2016-03-23 21:35:39.000000000) ---
Patch Set 2: Verified+1

Build Successful 
 
https://build.hpdd.intel.com/job/lustre-reviews/37881/ : SUCCESS

--- Message (Autotest, 2016-03-23 21:37:17.000000000) ---
Patch Set 2:

Onyx Autotest started enforced review-dne-part-1 session.

--- Message (Autotest, 2016-03-23 21:37:18.000000000) ---
Patch Set 2:

Onyx Autotest started enforced review-dne-part-2 session.

--- Message (Autotest, 2016-03-23 21:37:19.000000000) ---
Patch Set 2:

Onyx Autotest started enforced review-zfs-part-1 session.

--- Message (Autotest, 2016-03-23 21:37:20.000000000) ---
Patch Set 2:

Onyx Autotest started enforced review-ldiskfs session.

--- Message (Autotest, 2016-03-23 21:37:20.000000000) ---
Patch Set 2:

Onyx Autotest started enforced review-zfs-part-2 session.

--- Message (Oleg Drokin, 2016-03-23 21:38:55.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2016-03-23 21:38:58.000000000) ---
Change has been successfully cherry-picked as c8e9c0cdd3f82385f5f088b61f677e62f063517f
